--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.16.0",
     "pg": "^8.13.0",
-    "pkg": "^5.8.1"
+    "pkg": "^5.8.1",
+    "socket.io": "^4.8.1"
   }
 }
